# report2junit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  makefile.yml  release.yml
report2junit/: __init__.py  junit.py
report2junit/reports/: __init__.py  cfn_guard.py  cfn_nag.py  junit.py  noreport.py  report_factory.py
sample-reports/: cfn-guard-fully-compliant.json  cfn-guard-skipped-only.json  cfn-guard.json  cfn-nag.json
tests/: __init__.py  conftest.py  test_cli.py  test_report2junit.py
tests/expected_payloads/: cfn-guard-fully-compliant.xml  cfn-guard-skipped-only.xml  cfn-guard.xml  cfn-nag.xml  combined.xml
tests/reports/: test_cfn_guard.py  test_cfn_nag.py  test_no_report.py
