[tool.poetry]
name = "report2junit"
version = "0.3.1"
description = "`report2junit` is a tool that converts various reports into the JUnit format."
authors = ["Joris Conijn <joris@conijnonline.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
junit-xml = "^1.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.8.1"
toml = "^0.10.2"
types-toml = "^0.10.1"
twine = "^3.4.2"
radon = "^5.1.0"
xenon = "^0.8.0"

[tool.poetry.scripts]
report2junit = 'report2junit:main'

[tool.semantic_release]
version_variable = [
    "report2junit/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
